# 0nyxtechtoken

./: .env.example  .env.hidden  .env.local.example  .gitignore  ADVANCED_BACKTESTING_ENHANCEMENTS.md  AFFILIATE_SIGNUP_FIX.md  AFFILIATE_SIGNUP_FIX_COMPLETE.md  AFFILIATE_SYSTEM_COMPLETE.md  AXIOM_TRADE_IMPLEMENTATION.md  BACKEND_UI_INTEGRATION.md  BACKTEST_ENGINE_README.md  COMPREHENSIVE_DEBUG_GUIDE.md  COPY_TRADING_IMPLEMENTATION.md  COPY_TRADING_IMPLEMENTATION_STATUS.md  COPY_TRADING_QUICK_START.md  COPY_TRADING_SYSTEM_README.md  COPY_TRADING_TESTING_GUIDE.md  CRYPTO_OVERVIEW_UPDATE.md  DATABASE.md  DEBUG_PASSWORD_RESET.md  DEPLOYMENT_GUIDE.md  DEPLOY_SOLANA_FUNCTION.md  DEVELOPMENT_SETUP.md  EMINI_COMMISSION_FIX.md  ENV_SETUP.md  ERROR_FIXES_SUMMARY.md  FIXES_IMPLEMENTATION_SUMMARY.md  Frontend.MD  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INSTITUTIONAL_BACKTESTER_README.md  INSTITUTIONAL_ROADMAP.md  INTEGRATION_GUIDE.md  JWT_SECRET_SETUP.md  MANUAL_STRIPE_WEBHOOK_SETUP.md  MARKETPLACE_IMPLEMENTATION.md  MARKET_DATA_INTEGRATION.md  MULTI_USER_BACKTESTING_PLATFORM.md  OAUTH_SETUP_GUIDE.md  PASSWORD_RESET_AND_AFFILIATE_FIX.md  (+168 more)
TEST/: main.py
api/: test-env.js
backtest-engine/: Cargo.toml  README.md
backtest-engine/benches/: engine_benchmark.rs
backtest-engine/src/: brokerage.rs  config.rs  datafeed.rs  engine.rs  events.rs  lib.rs  metrics.rs  order_manager.rs  portfolio.rs
docs/: AFFILIATE_SYSTEM.md  STRIPE_WEBHOOK_SETUP.md
lean-service/: Dockerfile  docker-compose.yml  enhanced_lean_wrapper.py  main.py  requirements.txt
migrations/: 001_create_payout_system.sql  002_create_test_commission.sql  003_create_stripe_connect_tables.sql  README.md  fix_user_signup_database_error.sql
public/: inpage.js  (+10 more)
rust-backend/: Cargo.toml  MIGRATION.md  README.md
rust-backend/src/: config.rs  main.rs
rust-backend/src/api/: jupiter.rs  mev.rs  mod.rs  presets.rs  pump_fun.rs  routes.rs  rpc.rs  sse.rs  tokens.rs  turnkey.rs  websocket.rs
rust-backend/src/execution/: direct_dex_fallback.rs  mod.rs  multi_bundle.rs  sniper_mode.rs
rust-backend/src/jupiter/: client.rs  mod.rs  quote.rs  swap.rs  types.rs
rust-backend/src/models/: mod.rs  quote.rs  token.rs  transaction.rs
rust-backend/src/rpc/: client.rs  mod.rs  pool.rs  private_rpc.rs  router.rs  staked_nodes.rs
rust-backend/src/services/: bloxroute.rs  copy_trade.rs  honeypot_analyzer.rs  jito_bundle.rs  migration_detector.rs  mod.rs  priority_fee.rs  pulse_categorizer.rs  sandwich_detector.rs  swap_stream.rs  tx_simulator.rs  yellowstone_geyser.rs
rust-backend/src/utils/: memory.rs  mod.rs  time.rs
(+1094 files in other folders)
