[package]
name = "wagyu-rust-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "macros", "multipart"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Solana
solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"
spl-token = "4.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
rkyv = { version = "0.7", features = ["validation"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# gRPC for Yellowstone Geyser
tonic = "0.11"
tonic-build = "0.11"
prost = "0.12"

# High Performance / HFT
crossbeam = "0.8"
[target.'cfg(target_os = "linux")'.dependencies]
affinity = "0.1"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
bs58 = "0.5"
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"
dotenv = "0.15"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.11"
